--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -37,6 +37,7 @@ pipeline {
   post {
         always {
             archiveArtifacts artifacts: 'tfplan.txt'
+	    deleteDir() /*clean up our workspace */
         }
     }
 }
