--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -10,30 +10,31 @@ pipeline {
   stages {
    stage('Preparations') {
       steps {
+	sh "cd ${WORKSPACE}/aws/"      
 	withCredentials ([usernamePassword(credentialsId: 'aws_credentails', usernameVariable: 'aws_access_key', passwordVariable: 'aws_secret_key')]) {
-	   sh "echo aws_access_key=${aws_access_key} \n >> aws/${BUILD_ID}_terraform.tfvars"
-	   sh "echo aws_secret_key=${aws_secret_key} \n >> aws/${BUILD_ID}_terraform.tfvars"
-           sh "echo app_name=${app_name} \n >> aws/${BUILD_ID}_terraform.tfvars"
-	   sh "echo app_environment=${app_environment} \n >> aws/${BUILD_ID}_terraform.tfvars"
-	   sh "echo aws_region=${aws_region} \n >> aws/${BUILD_ID}_terraform.tfvars"
-	   sh "echo instance_type=${instance_type} \n >> aws/${BUILD_ID}_terraform.tfvars"
+	   sh "echo aws_access_key=${aws_access_key} \n >> ${BUILD_ID}_terraform.tfvars"
+	   sh "echo aws_secret_key=${aws_secret_key} \n >> ${BUILD_ID}_terraform.tfvars"
+           sh "echo app_name=${app_name} \n >> ${BUILD_ID}_terraform.tfvars"
+	   sh "echo app_environment=${app_environment} \n >> ${BUILD_ID}_terraform.tfvars"
+	   sh "echo aws_region=${aws_region} \n >> ${BUILD_ID}_terraform.tfvars"
+	   sh "echo instance_type=${instance_type} \n >> ${BUILD_ID}_terraform.tfvars"
 	}
-	sh 'cd aws && cat ${BUILD_ID}_terraform.tfvars'
+	sh "pwd && cat ${BUILD_ID}_terraform.tfvars"
       }
     }
     stage('Terraform Init') {
       steps {
-	sh "cd aws/"
+	sh "cd ${WORKSPACE}/aws/"
 	sh 'pwd'
         sh "terraform init"
       }
     }
     stage('Terraform Plan') {
       steps {
-	sh "cd aws/"
+	sh "cd ${WORKSPACE}/aws/"
 	sh 'pwd'
-        sh "terraform plan -out=tfplan -var-file=aws/${BUILD_ID}_terraform.tfvars"
-        sh "terraform show -no-color tfplan > aws/${BUILD_ID}_tfplan.txt"
+        sh "terraform plan -out=tfplan -var-file=${BUILD_ID}_terraform.tfvars"
+        sh "terraform show -no-color tfplan > ${BUILD_ID}_tfplan.txt"
       }
     }
   }
