--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
   stages {
    stage('Preparations') {
       steps {
-	sh "cd ${WORKSPACE}/aws/"      
+	sh "cd ${WORKSPACE}/aws"      
 	withCredentials ([usernamePassword(credentialsId: 'aws_credentails', usernameVariable: 'aws_access_key', passwordVariable: 'aws_secret_key')]) {
 	   sh "echo aws_access_key=${aws_access_key} \n >> ${BUILD_ID}_terraform.tfvars"
 	   sh "echo aws_secret_key=${aws_secret_key} \n >> ${BUILD_ID}_terraform.tfvars"
@@ -19,20 +19,18 @@ pipeline {
 	   sh "echo aws_region=${aws_region} \n >> ${BUILD_ID}_terraform.tfvars"
 	   sh "echo instance_type=${instance_type} \n >> ${BUILD_ID}_terraform.tfvars"
 	}
-	sh "pwd && cat ${BUILD_ID}_terraform.tfvars"
+	sh "cat ${BUILD_ID}_terraform.tfvars"
       }
     }
     stage('Terraform Init') {
       steps {
-	sh "cd ${WORKSPACE}/aws/"
-	sh 'pwd'
+	sh "cd ${WORKSPACE}/aws"
         sh "terraform init"
       }
     }
     stage('Terraform Plan') {
       steps {
-	sh "cd ${WORKSPACE}/aws/"
-	sh 'pwd'
+	sh "cd ${WORKSPACE}/aws"
         sh "terraform plan -out=tfplan -var-file=${BUILD_ID}_terraform.tfvars"
         sh "terraform show -no-color tfplan > ${BUILD_ID}_tfplan.txt"
       }
