--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -10,10 +10,12 @@ pipeline {
   stages {
    stage('Preparations') {
       steps {
-	withCredentials ([usernamePassword(credentialsId: 'aws_credentails', usernameVariable: 'aws_access_key', passwordVariable: 'aws_secret_key')]) {
-	   access_key = aws_access_key
-	   secret_key = aws_secret_key
+	script {
+		withCredentials ([usernamePassword(credentialsId: 'aws_credentails', usernameVariable: 'aws_access_key', passwordVariable: 'aws_secret_key')]) {
+	   def access_key = aws_access_key
+	   def secret_key = aws_secret_key
 	}
+	
 	dir('aws') {     
 	sh "echo aws_access_key=${access_key} \n >> ${BUILD_ID}_terraform.tfvars"
 	sh "echo aws_secret_key=${secret_key} \n >> ${BUILD_ID}_terraform.tfvars"
