--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -14,8 +14,8 @@ pipeline {
       steps {
 	script {
 		withCredentials ([usernamePassword(credentialsId: 'aws_credentails', usernameVariable: 'aws_access_key', passwordVariable: 'aws_secret_key')]) {
-		   def access_key = aws_access_key
-		   def secret_key = aws_secret_key
+		   access_key = aws_access_key
+		   secret_key = aws_secret_key
 		}
 	}
 	dir('aws') {     
