--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -36,7 +36,7 @@ pipeline {
     stage('Terraform Init') {
       steps {
 	dir('aws') {   
-        	sh "terraform init -backend-config 'bucket=jenkins' -backend-config 'region=${region}' -backend-config 'key=tf-state/${BUILD_ID}_terraform.tfstate'"
+        	sh "terraform init -backend-config 'bucket=jenkins' -backend-config 'region=${aws_region}' -backend-config 'key=tf-state/${BUILD_ID}_terraform.tfstate'"
 	}
       }
     }
