--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -38,8 +38,8 @@ pipeline {
 	dir('aws') {  
 		sh "terraform init -backend-config=\"conn_str=postgres://jenkins:jenkins@localhost/terraformstate?sslmode=disable\""
 		//sh "terraform init  -input=false -backend-config=\"bucket=jenkins\" -backend-config=\"access_key=${access_key}\" -backend-config=\"secret_key=${secret_key}\" -backend-config=\"region=${aws_region}\" -backend-config=\"key=tf-state/${BUILD_ID}_terraform.tfstate\""
-		sh "terraform workspace new ${BUILD_ID}-state"
-		sh "terraform workspace select  ${BUILD_ID}-state"
+		//sh "terraform workspace new ${BUILD_ID}-state"
+		//sh "terraform workspace select  ${BUILD_ID}-state"
 		sh "terraform workspace show"        	
 	  }
        }
