--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -42,6 +42,7 @@ pipeline {
 		sh "terraform workspace select  ${BUILD_ID}-state"
 		sh "terraform init -backend-config=\"conn_str=postgres://jenkins:jenkins@localhost/terraformstate?sslmode=disable\" -input=false"
 		sh "terraform workspace show"
+		sh "terraform state pull"
 	  }
        }
     }
