--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -53,6 +53,13 @@ pipeline {
 	}
       }
     }
+   stage('Terraform Apply') {
+      steps {
+	dir('aws') {   
+        	sh "terraform plan -auto-approve -input=false -var-file=${BUILD_ID}_terraform.tfvars"
+	}
+      }
+    }
   }
   post {
         always {
