--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -56,7 +56,7 @@ pipeline {
    stage('Terraform Apply') {
       steps {
 	dir('aws') {   
-        	sh "terraform plan -auto-approve -input=false -var-file=${BUILD_ID}_terraform.tfvars tfplan"
+        	sh "terraform plan -input=false -auto-approve tfplan"
 	}
       }
     }
