Signed-off-by: ganesh.pote@hotmail.com <ganesh.pote@hotmail.com>

--- a/azure/Jenkinsfile
+++ b/azure/Jenkinsfile
@@ -25,7 +25,7 @@ pipeline {
 		   azure_client_secret = azure_client_secret
 		}
 	}
-	dir('aws') {
+	dir('azure') {
 		script {
 			data = "azure_subscription_id=\"${azure_subscription_id}\"\n"
 			data = data + "azure_tenant_id=\"${azure_tenant_id}\"\n"
@@ -41,7 +41,7 @@ pipeline {
     }
     stage('Terraform Init') {
       steps {
-	dir('aws') {  
+	dir('azure') {  
 		sh "terraform init -backend-config=\"conn_str=postgres://jenkins:jenkins@localhost/terraformstate?sslmode=disable\" -input=false"
 		//sh "terraform init  -input=false -backend-config=\"bucket=jenkins\" -backend-config=\"access_key=${access_key}\" -backend-config=\"secret_key=${secret_key}\" -backend-config=\"region=${aws_region}\" -backend-config=\"key=tf-state/${BUILD_ID}_terraform.tfstate\""
 		sh "terraform workspace new ${BUILD_ID}-state"
@@ -53,7 +53,7 @@ pipeline {
     }
     stage('Terraform Plan') {
       steps {
-	dir('aws') {   
+	dir('azure') {   
         	sh "terraform plan -out=tfplan -var-file=${BUILD_ID}_terraform.tfvars"
         	sh "terraform show -no-color tfplan > ${BUILD_ID}_tfplan.txt"
 	}
@@ -61,7 +61,7 @@ pipeline {
     }
    stage('Terraform Apply') {
       steps {
-	dir('aws') {   
+	dir('azure') {   
         	sh "terraform apply -input=false -auto-approve tfplan"
 		sh "terraform output"
 	}
@@ -69,7 +69,7 @@ pipeline {
     }
   stage('Terraform Destroy Approval') {
 	   steps {
-		   dir('aws') {  
+		   dir('azure') {  
             script {
                 def plan = readFile "${BUILD_ID}_tfplan.txt"
                 input message: "Do you want to destroy the plan?",
@@ -80,7 +80,7 @@ pipeline {
     }
 stage('Terraform Destroy') {
       steps {
-	dir('aws') {   
+	dir('azure') {   
 		sh "terraform workspace select  ${BUILD_ID}-state"
         	sh "terraform destroy -input=false -auto-approve -var-file=${BUILD_ID}_terraform.tfvars"
 	}
@@ -89,7 +89,7 @@ stage('Terraform Destroy') {
   }
   post {
         always {
-		dir('aws') { 
+		dir('azure') { 
             archiveArtifacts artifacts: "${BUILD_ID}_tfplan.txt"
 			//cleanWs()
 		}
