--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -68,7 +68,20 @@ pipeline {
 	    html_body = html_body + "Your request number <b> ${BUILD_ID} </b> has been approved and completed.<br/><br/>"
 	    html_body = html_body + "Below are the provisioning details for your reference : <br/><br/>"
 	    html_body = html_body + "<table><tr>"
-	    html_body = html_body + "<td>Deployment Ref ID:</td><td>${BUILD_ID}</td>"
+	    html_body = html_body + "<td>Deployment Ref ID:</td><td>terraform output -raw ami</td>"
+	    html_body = html_body + "<td>ami:</td><td>${BUILD_ID}</td>"
+	    html_body = html_body + "<td>Application Url:</td><td>terraform output -raw application_url</td>"
+	    html_body = html_body + "<td>Instance arn:</td><td>terraform output -raw arn</td>"
+	    html_body = html_body + "<td>Availability Zone</td><td>terraform output -raw arn</td>"
+	    html_body = html_body + "<td>Instance Type:</td><td>terraform output -raw instance_type</td>"
+            html_body = html_body + "<td>Key Name:</td><td>terraform output -raw key_name</td>"
+	    html_body = html_body + "<td>Private DNS:</td><td>terraform output -raw private_dns</td>"
+	    html_body = html_body + "<td>Private IP:</td><td>terraform output -raw private_ip</td>"
+            html_body = html_body + "<td>Public DNS:</td><td>terraform output -raw public_dns</td>"
+	    html_body = html_body + "<td>Public IP:</td><td>terraform output -raw public_id</td>"
+	    html_body = html_body + "<td>Route Table ID:</td><td>terraform output -raw route_table_id</td>"		
+	    html_body = html_body + "<td>Subnet ID:</td><td>terraform output -raw subnet_id</td>"		
+	    html_body = html_body + "<td>VPC ID:</td><td>terraform output -raw vpc_id</td>"		
 	    html_body = html_body + "</table></tr>"
 	    html_body = html_body + "<br/><br/>Thanks, </br>Deployment Team"
 	}
