--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -67,22 +67,22 @@ pipeline {
 	    html_body = "Dear User, <br/><br/>" 
 	    html_body = html_body + "Your request number <b> ${BUILD_ID} </b> has been approved and completed.<br/><br/>"
 	    html_body = html_body + "Below are the provisioning details for your reference : <br/><br/>"
-	    html_body = html_body + "<table><tr>"
-	    html_body = html_body + "<td>Deployment Ref ID:</td><td>terraform output -raw ami</td>"
-	    html_body = html_body + "<td>ami:</td><td>${BUILD_ID}</td>"
-	    html_body = html_body + "<td>Application Url:</td><td>terraform output -raw application_url</td>"
-	    html_body = html_body + "<td>Instance arn:</td><td>terraform output -raw arn</td>"
-	    html_body = html_body + "<td>Availability Zone</td><td>terraform output -raw arn</td>"
-	    html_body = html_body + "<td>Instance Type:</td><td>terraform output -raw instance_type</td>"
-            html_body = html_body + "<td>Key Name:</td><td>terraform output -raw key_name</td>"
-	    html_body = html_body + "<td>Private DNS:</td><td>terraform output -raw private_dns</td>"
-	    html_body = html_body + "<td>Private IP:</td><td>terraform output -raw private_ip</td>"
-            html_body = html_body + "<td>Public DNS:</td><td>terraform output -raw public_dns</td>"
-	    html_body = html_body + "<td>Public IP:</td><td>terraform output -raw public_id</td>"
-	    html_body = html_body + "<td>Route Table ID:</td><td>terraform output -raw route_table_id</td>"		
-	    html_body = html_body + "<td>Subnet ID:</td><td>terraform output -raw subnet_id</td>"		
-	    html_body = html_body + "<td>VPC ID:</td><td>terraform output -raw vpc_id</td>"		
-	    html_body = html_body + "</table></tr>"
+	    html_body = html_body + "<table>"
+	    html_body = html_body + "<tr><td>Deployment Ref ID:</td><td>${BUILD_ID}</td></tr>"
+	    html_body = html_body + "<tr><td>ami:</td><td>"+sh(returnStdout: true, script: 'terraform output -raw ami').trim()+"</td></tr>"
+	    html_body = html_body + "<tr><td>Application Url:</td><td>"+sh(returnStdout: true, script: 'terraform output -raw application_url').trim()+"</td></tr>"
+	    html_body = html_body + "<tr><td>Instance arn:</td><td>"+sh(returnStdout: true, script: 'terraform output -raw arn').trim()+"</td></tr>"
+	    html_body = html_body + "<tr><td>Availability Zone</td><td>"+sh(returnStdout: true, script: 'terraform output -raw availability_zone').trim()+"</td></tr>"
+	    html_body = html_body + "<tr><td>Instance Type:</td><td>"+sh(returnStdout: true, script: 'terraform output -raw instance_type').trim()+"</td></tr>"
+        html_body = html_body + "<tr><td>Key Name:</td><td>"+sh(returnStdout: true, script: 'terraform output -raw key_name').trim()+"</td></tr>"
+	    html_body = html_body + "<tr><td>Private DNS:</td><td>"+sh(returnStdout: true, script: 'terraform output -raw private_dns').trim()+"</td></tr>"
+	    html_body = html_body + "<tr><td>Private IP:</td><td>"+sh(returnStdout: true, script: 'terraform output -raw private_ip').trim()+"</td></tr>"
+        html_body = html_body + "<tr><td>Public DNS:</td><td>"+sh(returnStdout: true, script: 'terraform output -raw public_dns').trim()+"</td></tr>"
+	    html_body = html_body + "<tr><td>Public IP:</td><td>"+sh(returnStdout: true, script: 'terraform output -raw public_id').trim()+"</td></tr>"
+	    html_body = html_body + "<tr><td>Route Table ID:</td><td>"+sh(returnStdout: true, script: 'terraform output -raw route_table_id').trim()+"</td></tr>"		
+	    html_body = html_body + "<tr><td>Subnet ID:</td><td>"+sh(returnStdout: true, script: 'terraform output -raw subnet_id').trim()+"</td></tr>"		
+	    html_body = html_body + "<tr><td>VPC ID:</td><td>"+sh(returnStdout: true, script: 'terraform output -raw vpc_id').trim()+"</td></tr>"		
+	    html_body = html_body + "</table>"
 	    html_body = html_body + "<br/><br/>Thanks, </br>Deployment Team"
 	}
 	mail 	to: 'ganesh.pote@ril.com', 
