--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -84,8 +84,8 @@ pipeline {
 			html_body = html_body + "Your request number <b> ${BUILD_ID} </b> has been approved and completed.<br/><br/>"
 			html_body = html_body + "Below are the provisioning details for your reference : <br/><br/>"
 			html_body = html_body + "<table>"
-			html_body = html_body + "<tr><td>Deployment Ref ID:</td><td>${BUILD_ID}</td></tr>"
-			html_body = html_body + "<tr><td>ami:</td><td>${ami}</td></tr>"
+			html_body = html_body + "<tr><td>Deployment ID:</td><td>${BUILD_ID}</td></tr>"
+			html_body = html_body + "<tr><td>AMI ID:</td><td>${ami}</td></tr>"
 			html_body = html_body + "<tr><td>Application Url:</td><td>${application_url}</td></tr>"
 			html_body = html_body + "<tr><td>Instance arn:</td><td>${arn}</td></tr>"
 			html_body = html_body + "<tr><td>Availability Zone</td><td>${availability_zone}</td></tr>"
@@ -99,12 +99,12 @@ pipeline {
 			html_body = html_body + "<tr><td>Subnet ID:</td><td>${subnet_id}</td></tr>"		
 			html_body = html_body + "<tr><td>VPC ID:</td><td>${vpc_id}</td></tr>"		
 			html_body = html_body + "</table>"
-			html_body = html_body + "<br/><br/>Thanks, </br>Deployment Team"
+			html_body = html_body + "<br/><br/>Thanks, </br>Cloud Deployment Team"
 		}
 		mail 	to: 'ganesh.pote@ril.com', 
 				from: 'jenkins@example.com',
 				mimeType: 'text/html',
-				subject: "Example Build: ${env.JOB_NAME} - Failed", 
+				subject: "Your deployment request number \"${BUILD_ID}\" status - Completed", 
 				body: html_body
 		  }
     }
