--- a/aws/Jenkinsfile
+++ b/aws/Jenkinsfile
@@ -102,7 +102,7 @@ pipeline {
 			html_body = html_body + "</table>"
 			html_body = html_body + "<br/><br/>Thanks, </br>Cloud Deployment Team"
 		}
-		mail 	to: 'ganesh.pote@ril.com', 
+	      		mail	to: '${user_email}', 
 				from: 'jenkins@example.com',
 				mimeType: 'text/html',
 				subject: "Your deployment request number \"${BUILD_ID}\" Status - Completed", 
